--- a/docs/package.json
+++ b/docs/package.json
@@ -39,7 +39,7 @@
     "gh-pages": "^3.1.0",
     "prettier": "2.1.1"
   },
-  "homepage": "https://okshok.github.io/docs/",
+  "homepage": "https://okshok.github.io/",
   "keywords": [
     "gatsby"
   ],
